--- a/src/components/molecules/Modal/style.module.scss
+++ b/src/components/molecules/Modal/style.module.scss
@@ -41,7 +41,7 @@
     transform: translate(-50%, -50%);
     z-index: 1001;
 
-    background: var(--color-white);
+    background: var(--background-gray1);
 
     border-radius: 8px;
 
