--- a/src/components/organisms/SearchModal/style.module.scss
+++ b/src/components/organisms/SearchModal/style.module.scss
@@ -2,8 +2,6 @@
     width: 600px;
     height: 54px;
 
-    background-color: var(--component-gray1);
-
     border-radius: 14px 14px 0 0;
     border-bottom: 1px solid var(--border-gray1);
 
@@ -29,8 +27,6 @@
 
         font-size: 16px;
 
-        background-color: var(--component-gray1);
-
         border: none;
         outline: none;
 
@@ -41,7 +37,7 @@
 }
 
 .content {
-    padding: 30px 20px 20px 20px;
+    padding: 20px;
 
     .title {
         font-size: 14px;
@@ -50,5 +46,9 @@
         margin: 0;
 
         color: var(--content-gray1);
+    }
+
+    section {
+        margin-top: 10px;
     }
 }
