feat: 뭔가 많이 수정

--- a/src/components/molecules/Header/style.module.scss
+++ b/src/components/molecules/Header/style.module.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
 
-    padding: 0 22px;
+    padding: 0 var(--padding);
 }
 
 .logo {
@@ -17,5 +17,4 @@
     font-size: 14px;
 
     color: var(--content-gray1);
-
 }
