--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,7 +16,7 @@ body, html {
 :root {
   --background-blue1: #FDFDFE;
   --background-blue2: #F7F9FF;
-  --background-blue3: #e5ebff;
+  --background-blue3: #eef3ff;
   --background-gray1: #FCFCFD;
   --background-gray2: #F9F9FB;
 
