--- a/src/features/Group/ui/GroupListSideBar/style.module.scss
+++ b/src/features/Group/ui/GroupListSideBar/style.module.scss
@@ -3,5 +3,9 @@
 }
 
 .groupList {
-    margin-top: 30px;
+    margin: 30px 0 10px 0;
+
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
