style: 컬러 시스템을 변경

--- a/src/app/login/mobile.module.scss
+++ b/src/app/login/mobile.module.scss
@@ -4,7 +4,7 @@
   width: 100dvw;
   height: 100dvh;
 
-  background-color: var(--background-gray1);
+  background-color: var(--gray-1);
 
   padding-inline: 20px;
   padding-block: 20px;
