--- a/src/components/molecules/GoogleLoginButton/styles.module.scss
+++ b/src/components/molecules/GoogleLoginButton/styles.module.scss
@@ -12,7 +12,7 @@
   font-weight: 500;
 
   background-color: #fff;
-  border: 2px solid var(--solid-blue1);
+  border: 2px solid var(--brand-50);
 
   border-radius: 12px;
 
