--- a/src/styles/app/page.module.scss
+++ b/src/styles/app/page.module.scss
@@ -20,13 +20,13 @@
     .progressMatchTitle {
         font-size: 18px;
         font-weight: 700;
-        color: var(--content-gray2);
+        color: var(--gray-90);
     }
 
     .progressMatchDescription {
         font-size: 14px;
         font-weight: 500;
-        color: var(--solid-gray1);
+        color: var(--gray-50);
     }
 
     .progressMatchData {
