--- a/src/components/molecules/MixirMatch/style.module.scss
+++ b/src/components/molecules/MixirMatch/style.module.scss
@@ -4,10 +4,10 @@
 
     padding: 14px;
 
-    background-color: var(--component-gray1);
+    background-color: var(--gray-1);
 
     border-radius: 12px;
-    border: 1px solid var(--border-gray1);
+    border: 1px solid var(--gray-20);
 
     box-shadow: 0 1px 2px #0a0d120d;
 }
@@ -15,5 +15,5 @@
 .title {
     font-size: 16px;
     font-weight: 600;
-    color: var(--content-gray2);
+    color: var(--gray-90);
 }
