--- a/src/components/molecules/SearchBar/style.module.scss
+++ b/src/components/molecules/SearchBar/style.module.scss
@@ -10,14 +10,14 @@
 
     padding: 0 32px 0 16px;
 
-    background-color: var(--component-gray1);
+    background-color: var(--gray-1);
 
     &:hover {
         cursor: pointer;
 
         transition: all 0.2s ease-in-out;
 
-        background-color: var(--component-gray2);
+        background-color: var(--gray-10);
     }
 
     &:active {
@@ -26,7 +26,7 @@
 }
 
 .icon {
-    fill: var(--solid-gray1);
+    fill: var(--gray-50);
 
     margin-right: 10px;
 }
@@ -40,13 +40,13 @@
 
     border-radius: 4px;
 
-    color: var(--content-gray1);
+    color: var(--gray-1);
 
-    border: 1px solid var(--border-gray3);
+    border: 1px solid var(--gray-30);
 }
 
 .title {
     font-size: 14px;
 
-    color: var(--content-gray1);
+    color: var(--gray-1);
 }
