--- a/src/components/organisms/SearchModal/style.module.scss
+++ b/src/components/organisms/SearchModal/style.module.scss
@@ -3,7 +3,7 @@
     height: 54px;
 
     border-radius: 14px 14px 0 0;
-    border-bottom: 1px solid var(--border-gray1);
+    border-bottom: 1px solid var(--gray-20);
 
     display: flex;
     align-items: center;
@@ -12,7 +12,7 @@
         width: 20px;
         height: 20px;
 
-        fill: var(--solid-gray1);
+        fill: var(--gray-50);
 
         margin-left: 16px;
     }
@@ -31,7 +31,7 @@
         outline: none;
 
         &::placeholder {
-            color: var(--content-gray1);
+            color: var(--gray-1);
         }
     }
 }
@@ -49,7 +49,7 @@
 
         margin: 0;
 
-        color: var(--content-gray1);
+        color: var(--gray-1);
     }
 
     section {
