--- a/src/features/SearchModal/ui/PageShorcut.module.scss
+++ b/src/features/SearchModal/ui/PageShorcut.module.scss
@@ -9,8 +9,8 @@
     justify-content: center;
     gap: 8px;
 
-    color: var(--content-gray1);
-    background-color: var(--component-gray1);
+    color: var(--gray-1);
+    background-color: var(--gray-1);
 
     font-size: 14px;
     font-weight: 500;
