--- a/src/features/SearchModal/ui/RecentStudent.module.scss
+++ b/src/features/SearchModal/ui/RecentStudent.module.scss
@@ -21,10 +21,10 @@
     align-items: center;
     justify-content: center;
 
-    background-color: var(--component-gray1);
+    background-color: var(--gray-1);
 
     svg {
-        fill: var(--content-gray1);
+        fill: var(--gray-1);
     }
 }
 
@@ -38,13 +38,13 @@
         font-size: 14px;
         font-weight: 500;
 
-        color: var(--content-gray2);
+        color: var(--gray-90);
     }
 
     .class {
         font-size: 13px;
         font-weight: 500;
 
-        color: var(--content-gray1);
+        color: var(--gray-1);
     }
 }
