--- a/src/styles/app/group/page.module.scss
+++ b/src/styles/app/group/page.module.scss
@@ -1,6 +1,7 @@
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
 
     padding: 20px 40px 0 40px;
 }
