--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,18 +30,18 @@ body, html {
   --brand-100: #040C6B;
 
   /* Gray Scale */
-  --gray-1: #f7f7f7;
-  --gray-5: #f2f2f2;
-  --gray-10: #e8e8e8;
-  --gray-20: #dadada;
-  --gray-30: #cccccc;
-  --gray-40: #aeaeae;
-  --gray-50: #919191;
-  --gray-60: #747474;
-  --gray-70: #575757;
-  --gray-80: #3b3b3b;
-  --gray-90: #1f1f1f;
-  --gray-100: #000000;
+  --gray-1: #f5f5f5;
+  --gray-5: #f0f0f0;
+  --gray-10: #ededf5;
+  --gray-20: #E3E3F0;
+  --gray-30: #D5D5E5;
+  --gray-40: #B4B4C8;
+  --gray-50: #9595B1;
+  --gray-60: #707085;
+  --gray-70: #494957;
+  --gray-80: #24242B;
+  --gray-90: #18181C;
+  --gray-100: #18181a;
 
   --text: #18181a;
 
