style: warning, error 색상 추가

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -43,6 +43,12 @@ body, html {
   --gray-90: #18181C;
   --gray-100: #18181a;
 
+  --error-50: #F04438;
+  --error-60: #dd3939;
+
+  --warning-50: #FFA940;
+  --warning-60: #ff9900;
+
   --text: #18181a;
 
   --padding: 40px;
