--- a/src/features/Team/style.module.scss
+++ b/src/features/Team/style.module.scss
@@ -1,45 +1,39 @@
 // components/TeamBuildingModal/TeamBuildingModal.module.scss
 
+.wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     gap: 12px;
+
+    width: 100%;
 }
 
 .title {
     font-size: 20px;
     font-weight: 600;
     color: var(--gray-100);
+
     margin: 0;
 }
 
-.input {
-    width: 100%;
-    height: 48px;
-    padding: 0 16px;
-    border: 1px solid var(--gray-20);
-    border-radius: 8px;
+.description {
     font-size: 16px;
-    color: var(--gray-100);
-    background-color: var(--gray-1);
-
-    &::placeholder {
-        color: var(--gray-40);
-    }
-
-    &:focus {
-        outline: none;
-        border-color: var(--brand-50);
-        background-color: var(--white);
-    }
+    color: var(--gray-60);
+    margin: 0 0 20px 0;
 }
 
-.buttonGroup {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 12px;
 
-    button {
-        width: 100%;
-    }
+.bottom {
+    width: 100%;
+
+    margin-top: 10px;
 }
+
+
+
