팀빌딩 리스트 가로로 배치

--- a/src/styles/app/team/[teamId]/page.module.scss
+++ b/src/styles/app/team/[teamId]/page.module.scss
@@ -4,15 +4,9 @@
 
 .groupList {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    gap: 10px;
-}
 
-.groupList {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    background-color: red;
+
     gap: 20px;
     padding: 20px;
 }
